hphp/hack/test/typecheck/references/call_time_reference2.php.exp
File "call_time_reference2.php", line 4, characters 13-14:
Collection element cannot be marked as reference (Parsing[1002])
