hphp/hack/test/typecheck/references/call_time_reference2.php
<?hh // partial

function test($x, $y) {
  array($y, &$x);
}
